# beans

./: .gitignore  BeanStock.sql  BeanStock_checked.sql  CMakeLists.txt  DlgView.py  GUI.py  README.md  items.py  main.py  process_db.py
BeanStock/: BeanStock.aps  BeanStock.cpp  BeanStock.h  BeanStock.rc  BeanStock.sln  BeanStock.vcxproj  BeanStock.vcxproj.filters  BeanStockDlg.cpp  BeanStockDlg.h  DatabaseInterface.h  PostgresDB.cpp  PostgresDB.h  PostgresQuery.cpp  PostgresQuery.h  Resource.h
include/: CMakeLists.txt  Resource.h  pch.h
include/beans/: CMakeLists.txt  QueryInterface.h
mytests/: CMakeLists.txt
src/: CMakeLists.txt  DatabaseInterface.cpp  QueryInterface.cpp
